# learn-py-mongo-react

./: .gitignore  Python4Pune_CITI.ipynb  README.md  env-setup.md  file-handling.ipynb  main.py  main_app.py  models.py  pyproject.toml  requirements.txt  test.json
data/: example.txt  sample-v1.txt  sample_data.json
learn-by-doing/: 01-basic.md  02-basic-questions-p1.md  03-basic-questions-p2.md
notebooks/: file-handling.ipynb  oop-intro.ipynb
projects/fastapi-products/: main.py  requirements.txt  seed.py
projects/fastapi-products/app/: database.py  middleware.py  oauth2.py  schemas.py
projects/fastapi-products/app/routers/: products.py  sellers.py
projects/fastapi-products/backend/: seed.py
projects/fastapi-products/backend/app/: database.py
projects/fastapi-products/backend/app/routers/: auth.py  sellers.py
projects/fastapi-products/backend/app/utils/: helpers.py
projects/fastapi-products/frontend/storefront/: README.md  backend_fix_products.py  package-lock.json  package.json
projects/fastapi-products/frontend/storefront/src/: App.tsx  index.css
projects/fastapi-products/frontend/storefront/src/api/: client.ts  services.ts
projects/fastapi-products/frontend/storefront/src/components/: ProtectedRoute.tsx
projects/fastapi-products/frontend/storefront/src/pages/: DashboardPage.tsx  LoginPage.tsx  NotFoundPage.tsx  ProductsPage.tsx  RegisterPage.tsx  SellersPage.tsx
projects/fastapi-products/frontend/storefront/src/store/: authStore.ts  themeStore.ts
projects/fastapi-products/frontend/storefront/src/types/: index.ts
(+2 files in other folders)
